images updated in html file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <body>
     <header>
-        <img src="" alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
+        <img src="images/logo-lockup.png"
+            alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
         <nav>
             <a>Jobs</a>
             <a>Companies</a>
@@ -31,8 +32,8 @@
 
     <main>
         <section id="featureOne">
-            <h1>Triangle Tech Jobs</h1>
-            <h2>Career Services for Tech Professionals in the Triangle.</h2>
+            <img src="images/word-mark.png" alt="Triangle Tech Jobs">
+            <h1>Career Services for Tech Professionals in the Triangle.</h1>
 
             <form>
                 <input type="text" name="jobTitle" value="Search Job Title">
@@ -110,7 +111,8 @@
     </main>
 
     <footer>
-        <img src="" alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
+        <img src="images/logo-lockup.png"
+            alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
         <section class="footerColumn">
             <h5>Triangle Tech Jobs</h5>
             <ul>
