--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="This is where your description goes">
     <meta name="keywords" content="one, two, three">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Triangle Tech Jobs</title>
 
@@ -14,13 +15,13 @@
 
     <!-- Fonts and Icons -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&family=Source+Sans+3:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/8745b435ef.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
+    <header class="navy shadow">
         <img src="images/logo-lockup.png"
             alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
         <nav>
@@ -32,16 +33,17 @@
 
     <main>
         <section id="featureOne">
-            <img src="images/word-mark.png" alt="Triangle Tech Jobs">
-            <h1>Career Services for Tech Professionals in the Triangle.</h1>
+            <!-- <img src="images/word-mark.png" alt="Triangle Tech Jobs"> -->
+            <h1 class="headingFont">Triangle Tech Jobs</h1>
+            <h2 class="headingFont">Career Services for Tech Professionals in the Triangle.</h2>
 
-            <form>
+            <form class="shadow">
                 <input type="text" name="jobTitle" value="Search Job Title">
                 <button type="button" name="jobTitleSearch"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
 
             <fieldset>
-                <legend>Filter Search Options:</legend>
+                <legend class="bold">Filter:</legend>
                 <section class="filterOption">
                     <input type="checkbox" id="remote" name="remote">
                     <label for="remote">Remote</label>
@@ -64,8 +66,8 @@
             </fieldset>
         </section>
 
-        <section id="featureTwo">
-            <h2>New Jobs</h2>
+        <section id="featureTwo" class="gray">
+            <h2 class="headingFont">New Jobs</h2>
 
             <section class="jobBoxHolder">
                 <section class="jobBox">
@@ -101,8 +103,8 @@
         </section>
 
         <section id="featureThree">
-            <h2>Companies We Work With</h2>
-            <section class="companyLogos">
+            <h2 class="headingFont">Companies We Work With</h2>
+            <section class="companyLogoHolder">
                 <img src="" class="companyLogos" alt="company logo number one">
                 <img src="" class="companyLogos" alt="company logo number two">
                 <img src="" class="companyLogos" alt="company logo number three">
@@ -110,7 +112,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="navy">
         <img src="images/logo-lockup.png"
             alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
         <section class="footerColumn">
