companies and about us pages added, basic form created for input

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
         <nav>
             <a>Jobs</a>
-            <a>Companies</a>
+            <a href="/companies.html">Companies</a>
             <a class="yellowButton">Sign In</a>
         </nav>
     </header>
