updating filter options

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                     <input type="checkbox" id="contract" name="contract">
                     <label for="contract">Contract</label>
                 </section>
+
+                <section class="filterOption">
+                    <input type="checkbox" id="benefits" name="benefits">
+                    <label for="benefits">Benefits</label>
+                </section>
             </fieldset>
         </section>
 
