updating image paths

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- external CSS link -->
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 
     <!-- Fonts and Icons -->
     <link
@@ -22,7 +22,7 @@
 
 <body>
     <header class="navy shadow">
-        <img src="images/logo-lockup.png"
+        <img src="public/images/logo-lockup.png"
             alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
         <nav>
             <a>Jobs</a>
