file paths updated

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </main>
 
     <footer class="navy">
-        <img src="images/logo-lockup.png"
+        <img src="public/images/logo-lockup.png"
             alt="logo for Triangle Tech Jobs, a yellow triangle with three buildings inside">
         <section class="footerColumn">
             <h5>Triangle Tech Jobs</h5>
