updated folders and files

--- a/companies.html
+++ b/companies.html
@@ -124,6 +124,11 @@
                         </section>
 
                         <section class="filterOption">
+                            <input type="checkbox" id="developer" name="developer">
+                            <label for="remote">UX Designer</label>
+                        </section>
+
+                        <section class="filterOption">
                             <input type="checkbox" id="" name="">
                             <label for=""></label>
                         </section>
